Revise registration messages. (#483)

--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -11,8 +11,10 @@
 {% block main_content %}
 <h1>Logged Out</h1>
 
-<p>You have successfully logged out of PlantShare. You may now close this
-browser window or <a href="{% url 'ps-main' %}">log in</a> again.</p>
+<p>You have logged out of PlantShare and may now close this
+browser window.</p>
+
+<p><a href="{% url 'ps-main' %}">Log in</a> again anytime!</p>
 {% endblock %}
 
 {% block sidebar_content %}
