--- a/gobotany/plantshare/templates/registration/registration_complete.html
+++ b/gobotany/plantshare/templates/registration/registration_complete.html
@@ -1,6 +1,6 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 
-{% block title %}Registration Complete: PlantShare{% endblock %}
+{% block title %}Sign Up Complete: PlantShare{% endblock %}
 
 {% block body_attributes %}id="complete" class="plantshare"{% endblock %}
 
@@ -9,11 +9,12 @@
 {% endblock %}
 
 {% block main_content %}
-<h1>Registration Complete</h1>
+<h1>Sign Up Complete</h1>
 
-<p>Thank you for registering for a PlantShare membership.  You should receive
-an email shortly.  Simply click the link in the email to activate your
-membership and begin using PlantShare!</p>
+<p>Thank you for signing up for PlantShare!</p>
+
+<p>You should receive an email shortly. Click the link in it
+to activate your PlantShare account.</p>
 {% endblock %}
 
 {% block sidebar_content %}
