--- a/gobotany/plantshare/templates/registration/registration_form.html
+++ b/gobotany/plantshare/templates/registration/registration_form.html
@@ -11,9 +11,9 @@
 {% block main_content %}
 <h1>Sign Up for PlantShare</h1>
 
-<p>Share your passion for the green world of New England plants. By signing
+<p>Share your passion for the green world of New England plants! By signing
 up, you will have your own home page complete with your plant discoveries,
-maps, checklists, and much more!</p>
+maps, checklists, and more.</p>
 
 <p>Start by entering your information below. You will receive an email message
 with a link to activate your account.</p>
