--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -225,10 +225,10 @@ a:active { color: #45ac11; }
 a:not([href]) { color: black; }
 a:not([href]):hover { text-decoration: none; }
 
-#main p a, #main li > a, #main dt a, #main td a { border-bottom: 1px solid #c3d941; }
-#main p a:hover, #main li > a:hover, #main dt a:hover, #main td a:hover { border-color: #317b0c; }
-#main p a:active, #main li > a:active, #main dt a:active, #main td a:active { border-color: #45ac11; }
-#main p a:not([href]), #main li > a:not([href]), #main dt a:not([href]), #main td a:not([href]) { border: 0; }
+#main p a, #main li > a, #main dt a, #main td a, #main h2 a { border-bottom: 1px solid #c3d941; }
+#main p a:hover, #main li > a:hover, #main dt a:hover, #main td a:hover, #main h2 a:hover { border-color: #317b0c; }
+#main p a:active, #main li > a:active, #main dt a:active, #main td a:active, #main h2 a:active { border-color: #45ac11; }
+#main p a:not([href]), #main li > a:not([href]), #main dt a:not([href]), #main td a:not([href]), #main h2 a:not([href]) { border: 0; }
 
 *|*:-moz-any-link:active, *|*:-moz-any-link:focus { border: 0; outline: 0; }
 
@@ -1233,10 +1233,12 @@ body.plantshare.sighting .modal-container .image-modal form { float: right; widt
 body.plantshare.sighting .modal-container .image-modal input { border: 0 none !important; box-shadow: inset 0 0 0 white !important; }
 body.plantshare.sighting .modal-container .image-modal input#id_image { clear: both; display: block; margin: 0 0 10px; }
 body.plantshare.sighting .modal-container .image-modal div.screening-notify p { margin: 5px 0; font-size: 10px; color: #888; }
-body.plantshare#ask #main h1 + img, body.plantshare#ask #main h2 + img, body.plantshare#plantshare #ask h1 + img, body.plantshare#plantshare #ask h2 + img { background: #ddd; float: left; height: 97px; margin: 8px 18px 18px 0; width: 103px; }
-body.plantshare#ask #main form, body.plantshare#plantshare #ask form { clear: left; }
-body.plantshare#ask #main textarea, body.plantshare#plantshare #ask textarea { border: 1px solid #aaa; height: 40px; margin: 0 0 1%; padding: 8px 10px; max-width: 97%; width: 97%; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
-body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit { float: right; text-transform: uppercase; }
+body.plantshare#ask #main h1 + img, body.plantshare#ask #main h2 + img, body.plantshare#plantshare #ask h1 + img, body.plantshare#plantshare #ask h2 + img { background: #ddd; float: left; height: 97px; margin: 8px 18px 12px 0; width: 103px; }
+body.plantshare#ask #main form, body.plantshare#plantshare #ask form { clear: left; height: 148px; padding-left: 121px; }
+body.plantshare#ask #main label, body.plantshare#plantshare #ask label { text-transform: none; width: auto; }
+body.plantshare#ask #main textarea, body.plantshare#plantshare #ask textarea { border: 1px solid #aaa; height: 46px; margin: 4px 0 10px; padding: 8px; width: 430px; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
+body.plantshare#ask #main #question-image, body.plantshare#plantshare #ask #question-image { float: right; margin-top: -19px; width: 120px; }
+body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit { clear: both; text-transform: uppercase; }
 body.plantshare#ask #main h2, body.plantshare#ask #main h3, body.plantshare#plantshare #ask h2, body.plantshare#plantshare #ask h3 { clear: both; }
 body.plantshare#ask #main .more, body.plantshare#plantshare #ask .more { text-align: right; }
 body.plantshare#questions #main { /* Questions and Answers page */ }
