Switch to a linear form layout for Ask the Botanist. (#475)

--- a/gobotany/plantshare/templates/_ask_botanist_section.html
+++ b/gobotany/plantshare/templates/_ask_botanist_section.html
@@ -1,3 +1,5 @@
+<div id="ask-section">
+
 <img src="/static/images/icons/botanist.jpg" alt="Ace Acer">
 
 <p><b>&#8220;Ace&#8221; Acer</b><br>
@@ -28,3 +30,5 @@ questions, and all visitors can see the answers.
     <button class="submit">Submit</button>
 </form>
 {% endif %}
+
+</div>
