--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1233,12 +1233,13 @@ body.plantshare.sighting .modal-container .image-modal form { float: right; widt
 body.plantshare.sighting .modal-container .image-modal input { border: 0 none !important; box-shadow: inset 0 0 0 white !important; }
 body.plantshare.sighting .modal-container .image-modal input#id_image { clear: both; display: block; margin: 0 0 10px; }
 body.plantshare.sighting .modal-container .image-modal div.screening-notify p { margin: 5px 0; font-size: 10px; color: #888; }
-body.plantshare#ask #main h1 + img, body.plantshare#ask #main h2 + img, body.plantshare#plantshare #ask h1 + img, body.plantshare#plantshare #ask h2 + img { background: #ddd; float: left; height: 97px; margin: 8px 18px 12px 0; width: 103px; }
-body.plantshare#ask #main form, body.plantshare#plantshare #ask form { clear: left; height: 148px; padding-left: 121px; }
+body.plantshare#ask #main #ask-section, body.plantshare#plantshare #ask #ask-section { margin-bottom: 18px; min-height: 100px; }
+body.plantshare#ask #main #ask-section img, body.plantshare#plantshare #ask #ask-section img { background: #ddd; float: left; height: 97px; margin: 8px 18px 0 0; width: 103px; }
+body.plantshare#ask #main form, body.plantshare#plantshare #ask form { clear: left; padding-left: 121px; }
 body.plantshare#ask #main label, body.plantshare#plantshare #ask label { text-transform: none; width: auto; }
-body.plantshare#ask #main textarea, body.plantshare#plantshare #ask textarea { border: 1px solid #aaa; height: 46px; margin: 4px 0 10px; padding: 8px; width: 430px; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
-body.plantshare#ask #main #question-image, body.plantshare#plantshare #ask #question-image { float: right; margin-top: -19px; width: 120px; }
-body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit { clear: both; text-transform: uppercase; }
+body.plantshare#ask #main textarea, body.plantshare#plantshare #ask textarea { border: 1px solid #aaa; height: 46px; margin: 4px 0 10px; padding: 8px; width: 571px; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
+body.plantshare#ask #main #question-image, body.plantshare#plantshare #ask #question-image { width: 120px; }
+body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit { clear: both; margin: 22px 0 8px; text-transform: uppercase; }
 body.plantshare#ask #main h2, body.plantshare#ask #main h3, body.plantshare#plantshare #ask h2, body.plantshare#plantshare #ask h3 { clear: both; }
 body.plantshare#ask #main .more, body.plantshare#plantshare #ask .more { text-align: right; }
 body.plantshare#questions #main { /* Questions and Answers page */ }
