--- a/gobotany/plantshare/templates/_ask_botanist_section.html
+++ b/gobotany/plantshare/templates/_ask_botanist_section.html
@@ -1,6 +1,6 @@
 <div id="ask-section">
 
-<img src="/static/images/icons/botanist.jpg" alt="Ace Acer">
+<img class="botanist" src="/static/images/icons/botanist.jpg" alt="Ace Acer">
 
 <p><b>&#8220;Ace&#8221; Acer</b><br>
 Our Ace Botanist is here to help you identify a plant, suggest locations
@@ -13,22 +13,27 @@ questions, and all visitors can see the answers.
 </p>
 
 {% if user.is_authenticated %}
-<form method="post" action="{% url 'ps-questions' %}">
+<form id="question-form" method="post" action="{% url 'ps-questions' %}">
     {% csrf_token %}
     <label for="question">Your Question</label>
     <textarea id="question" name="question"></textarea>
 
     <div id="question-image">
         <label for="upload-link">Image (optional)</label>
+        <input type="hidden" name="__template__question_image"
+            class="template-image"></input>
+        <div class="thumb-gallery"></div>
         <p class="upload">
             <a id="upload-link" href="#" rel=".image-modal">+ Upload Image</a>
         </p>
-        <input type="hidden" name="__template__question_image"
-            class="template-photo"></input>
     </div>
 
     <button class="submit">Submit</button>
 </form>
 {% endif %}
+
+<div class="modal-container">
+  {% include "_image_upload_form.html" with image_form=upload_photo_form %}
+</div>
 
 </div>
