Limit the number of question characters in the UI.
The model already sets a limit on the number of characters for a
question, but the UI allowed entering more, which would cause an
error. Also, adjusted the size of the textarea and added
placeholder text indicating the character limit. (#475)

--- a/gobotany/plantshare/templates/_ask_botanist_section.html
+++ b/gobotany/plantshare/templates/_ask_botanist_section.html
@@ -16,7 +16,9 @@ questions, and all visitors can see the answers.
 <form id="question-form" method="post" action="{% url 'ps-questions' %}">
     {% csrf_token %}
     <label for="question">Your Question</label>
-    <textarea id="question" name="question"></textarea>
+    <textarea id="question" name="question"
+        maxlength="{{ max_question_length }}"
+        placeholder="Up to {{ max_question_length }} characters"></textarea>
 
     <div id="question-image">
         <label for="upload-link">Image (optional)</label>
