Improve layout of question images. (#475)

--- a/gobotany/plantshare/templates/_recent_questions.html
+++ b/gobotany/plantshare/templates/_recent_questions.html
@@ -1,14 +1,12 @@
     <ul class="questions">
         {% for question in questions %}
             <li id="q{{ forloop.counter }}">
+                {% for image in question.images.all %}
+                    <img src="{{ image.thumb.url }}" alt="">
+                {% endfor %}
                 <dl>
                     <dt>Question</dt>
-                    <dd>
-                    {% for image in question.images.all %}
-                        <img src="{{ image.thumb.url }}" alt="">
-                    {% endfor %}
-                    {{ question.question }}
-                    </dd>
+                    <dd>{{ question.question }}</dd>
                     <dt>Answer</dt>
                     <dd>{{ question.answer }}
                     <span>({{ question.answered|date:"l, j F Y" }})</span></dd>
