--- a/gobotany/plantshare/templates/all_questions.html
+++ b/gobotany/plantshare/templates/all_questions.html
@@ -24,14 +24,12 @@
     <ul class="questions">
         {% for question in category.list %}
             <li id="q{{ question.id }}">
+                {% for image in question.images.all %}
+                    <img src="{{ image.thumb.url }}" alt="">
+                {% endfor %}
                 <dl>
                     <dt>Question</dt>
-                    <dd>
-                    {% for image in question.images.all %}
-                        <img src="{{ image.thumb.url }}" alt="">
-                    {% endfor %}
-                    {{ question.question }}
-                    </dd>
+                    <dd>{{ question.question }}</dd>
                     <dt>Answer</dt>
                     <dd>{{ question.answer }}</dd>
                 </dl>
