Improve the layout for portrait-orientation images. (#475)

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -678,6 +678,7 @@ body.plantshare {
     .upload {
         display: inline-block;
         float: left;
+        padding-bottom: 20px;
     }
 
 
@@ -795,6 +796,7 @@ body.plantshare {
             background-color: #f9faea;
             border: 1px solid $border-green;
             margin: 5px 0 10px;
+            min-height: 138px;  /* to handle portrait-orientation thumbnails */
             padding: 10px 12px;
         }
         img {
