--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1222,7 +1222,7 @@ body.plantshare .thumb-frame { display: inline-block; margin: 0 14px 0 0; vertic
 body.plantshare .thumb-frame .thumb { vertical-align: bottom; }
 body.plantshare .thumb-frame .delete-link { width: 100%; text-align: center; margin: 0; padding-top: 8px; }
 body.plantshare .thumb-frame .delete-link img { vertical-align: top; }
-body.plantshare .upload { display: inline-block; float: left; }
+body.plantshare .upload { display: inline-block; float: left; padding-bottom: 20px; }
 body.plantshare#sightings #main > ul { margin-top: 14px; }
 body.plantshare#sightings #main > ul > li { float: left; margin-bottom: 14px; }
 body.plantshare#sightings #main > ul > li ul { margin-left: 200px; margin-top: -20px; }
@@ -1246,7 +1246,7 @@ body.plantshare#questions #main #category-nav p { float: left; margin: 0; }
 body.plantshare#questions #main #category-nav ul { margin-left: 80px; }
 body.plantshare#questions #main #category-nav li { display: inline; margin-right: 8px; white-space: nowrap; }
 body.plantshare .questions { /* styles common to Ask the Botanist, questions pages */ }
-body.plantshare .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; padding: 10px 12px; }
+body.plantshare .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; min-height: 138px; /* to handle portrait-orientation thumbnails */ padding: 10px 12px; }
 body.plantshare .questions img { float: right; margin: 5px 0 5px 12px; }
 body.plantshare .questions dl { margin: 0; padding: 0; }
 body.plantshare .questions dt { clear: left; font-weight: bold; margin-top: 10px; }
