Allow viewing question images larger. (#475)

--- a/gobotany/plantshare/templates/_recent_questions.html
+++ b/gobotany/plantshare/templates/_recent_questions.html
@@ -1,9 +1,7 @@
     <ul class="questions">
         {% for question in questions %}
             <li id="q{{ forloop.counter }}">
-                {% for image in question.images.all %}
-                    <img src="{{ image.thumb.url }}" alt="">
-                {% endfor %}
+                {% include "_question_images.html" %}
                 <dl>
                     <dt>Question</dt>
                     <dd>{{ question.question }}</dd>
