--- a/gobotany/plantshare/templates/all_questions.html
+++ b/gobotany/plantshare/templates/all_questions.html
@@ -24,9 +24,7 @@
     <ul class="questions">
         {% for question in category.list %}
             <li id="q{{ question.id }}">
-                {% for image in question.images.all %}
-                    <img src="{{ image.thumb.url }}" alt="">
-                {% endfor %}
+                {% include "_question_images.html" %}
                 <dl>
                     <dt>Question</dt>
                     <dd>{{ question.question }}</dd>
