--- a/gobotany/plantshare/templates/_ask_botanist_section.html
+++ b/gobotany/plantshare/templates/_ask_botanist_section.html
@@ -16,7 +16,7 @@ questions, and all visitors can see the answers.
 <form id="question-form" method="post" action="{% url 'ps-questions' %}">
     {% csrf_token %}
     <label for="question">Your Question</label>
-    <textarea id="question" name="question"
+    <textarea id="question" name="question" required
         maxlength="{{ max_question_length }}"
         placeholder="Up to {{ max_question_length }} characters"></textarea>
 
