Add a generic copyright notice atop lightboxed question images. (#475)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -11,7 +11,7 @@
     ]);
 {% endblock %}
 
-{% block body_attributes %}id="plantshare" class="plantshare"{% endblock %}
+{% block body_attributes %}id="plantshare" class="plantshare ask"{% endblock %}
 
 {% block main_content %}
 <h1>PlantShare</h1>
