--- a/gobotany/plantshare/templates/_question_images.html
+++ b/gobotany/plantshare/templates/_question_images.html
@@ -1,5 +1,7 @@
         {% for image in question.images.all %}
-            <a href="{{ image.image.url }}" rel="shadowbox">
+            <a href="{{ image.image.url }}" rel="shadowbox"
+                title="Copyright 2013 PlantShare user, used by permission
+                by New England Wild Flower Society. All rights reserved.">
                 <img src="{{ image.thumb.url }}" alt="">
             </a>
         {% endfor %}
