Indicate that a notification will be sent upon answering a question. (#473)

--- a/gobotany/plantshare/templates/new_question_done.html
+++ b/gobotany/plantshare/templates/new_question_done.html
@@ -7,8 +7,9 @@
 {% block main_content %}
 <h1>Question Submitted</h1>
 
-<p>Thank you for asking your question. The botanist will review it
-and post an answer on the site.</p>
+<p>Thank you for asking your question!</p>
+
+<p>You will be notified by email when it is answered on the site.</p>
 
 <p><a href="{% url 'ps-questions' %}#recent">Recently Answered Questions</a></p>
 
