Feedback from Bob at Montshire.

--- a/gobotany/site/templates/montshire/_header.html
+++ b/gobotany/site/templates/montshire/_header.html
@@ -8,7 +8,7 @@
 
 {% block home_page_partner_site_name_tagline %}
     <p class="site-name"><b>Montshire Flora</b>
-        <i>Discover the plants of Montshire Museum</i></p>
+        <i>Discover plants at the Montshire Museum of Science</i></p>
 {% endblock %}
 
 {% block partner_site_name_tagline %}
