--- a/gobotany/site/templates/montshire/_home_body_content.html
+++ b/gobotany/site/templates/montshire/_home_body_content.html
@@ -22,9 +22,10 @@
 
 {% block partner_introduction %}
     <div class="intro">
-        <p>The <b>Go Botany Montshire Flora</b> web site contains a
-        comprehensive list of plants located on the <b>Montshire Museum
-        of Science</b> in Norwhich, Vermont</b>, and is a customized version of Go Botany.
+        <p>The <b>Go Botany Montshire Flora</b> website contains a
+        comprehensive list of plants located on the grounds of the 
+		<a href="http://www.montshire.org/"> <b>Montshire Museum
+        of Science</b></a> in Norwich, Vermont</b>, and is a customized version of Go Botany.
         To learn about all of the plants of New England, visit the main
         <a href="http://gobotany.newenglandwild.org/" 
             >Go Botany</a>
