Connect Full Key in navigation and remove old placeholders. (#494)

--- a/gobotany/site/templates/gobotany/advanced.html
+++ b/gobotany/site/templates/gobotany/advanced.html
@@ -30,7 +30,7 @@
                                     get lots of information on each taxon.</li>
                                 </ul>
                             </section>
-                            <a href="{% url 'full-key-placeholder' %}"
+                            <a href="{% url 'level1' 'full' %}"
                                 class="go-fullkey-btn">Go To Full Key</a>
                         </div>
                         <div class="dk-landing-section">
