First pass at fixing Literary Source admin features. (#500)
TaxonCharacterValue.literary_source replaces lit_source and is now a
ForeignKey to the new SourceCitation model. For now, the custom admin
page is still a text input, but will look up the exact text to find an
existing SourceCitation which matches.  Further improvement will change
this into a dropdown or auto-suggest box.

--- a/gobotany/editor/templates/gobotany/edit_lit_sources.html
+++ b/gobotany/editor/templates/gobotany/edit_lit_sources.html
@@ -17,7 +17,7 @@
     {% with character=character_value.character %}
     <div>
       <input name="tcv{{ tcv.id }}"
-             value="{{ tcv.lit_source|default_if_none:"" }}">
+             value="{{ tcv.literary_source|default_if_none:"" }}">
       <i>{{ tcv.taxon.scientific_name }}</i>
       {{ tcv.character_value.character.name }}
       {% if tcv.character_value.character.value_type == 'LENGTH' %}
